rust/tests/errors/mismatched_component_tags.hyper
---

<{Card}>
    <p>Content</p>
</{Button}>
